# betterlytics

./: .dockerignore  .env.example  .env.production.example  .gitignore  .prettierignore  BACKUP.md  BLOG_DRAFT_EU_GA_ALTERNATIVES.md  BLOG_RENDERING_PLAN.md  BLOG_RENDERING_PLAN_NEXTRA.md  CONTRIBUTING.md  Dockerfile.selfhost  README.md  SETUP.md  TODO.md  TODO_timeseries.md  benchmark-queries.js  docker-compose.production.yml  docker-compose.yml  k6-perf-test.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  simulate-events.js  test.md
.claude/: settings.local.json
backend/: Cargo.toml  Dockerfile
better-analytics-dashboard/: package.json
caddy/: Caddyfile  Caddyfile.local  Dockerfile  routes.caddy
clickhouse-backup-config/: config.yml
clickhouse-config/: Dockerfile
dashboard/: .env.build  Dockerfile  MIGRATION_NEXTJS16.md  REACTIVITY_BUG.md  eslint.config.mjs  next.config.ts  package.json  profiler.js  vitest.config.ts
data-seeder/: Cargo.toml
data-seeder/src/: main.rs
docs/: Dockerfile  GDPR_CITY_LEVEL_GEOGRAPHY.md  next.config.mjs  package.json
initializer/: Dockerfile  package.json
migrations/: 10_add_cwv_event_type.sql  10_add_outbound_link_url_column.sql  10_add_scroll_depth_column.sql  11_add_cwv_event_type.sql  12_add_scroll_depth_column.sql  12_add_session_replays.sql  13_add_device_versions.sql  13_add_scroll_depth_column.sql  13_add_session_replays_ttl.sql  14_apply_low_cardinality.sql  15_add_monitor_results.sql  15_add_monitor_tables.sql  15_add_site_config_status.sql  16_add_monitor_incidents.sql  16_drop_user_agent_column.sql  (+48 more)
(+2884 files in other folders)
