[package]
name = "data-seeder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-seeder"
path = "src/main.rs"

[dependencies]
clickhouse = { version = "0.13.2", features = ["inserter", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
dotenv = "0.15"
